--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm run build"
-  publish = "out"
+  publish = ".next"
 [dev]
   command = "npm run dev" # Command to start your dev server
   port = 8888 # The port that the netlify dev will be accessible on
