--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/eslint-parser": "^7.13.10",
+    "@netlify/plugin-nextjs": "^3.0.3",
     "@tailwindcss/jit": "^0.1.8",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
