--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build]
   command = "npm run build"
   publish = "out"
+
+[[plugins]]
+  package = "/node_modules/@netlify/plugin-nextjs"
+
 [dev]
   command = "npm run dev" # Command to start your dev server
   port = 8888 # The port that the netlify dev will be accessible on
