--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^0.21.1",
     "netlify-plugin-cache-nextjs": "^1.6.0",
     "next": "10.0.9",
+    "next-seo": "^4.24.0",
+    "preact": "^10.5.13",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
@@ -45,6 +47,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "globby": "^11.0.3",
+    "jsdoc": "^3.6.6",
     "postcss": "^8.2.10",
     "postcss-100vh-fix": "^1.0.2",
     "postcss-flexbugs-fixes": "^5.0.2",
