--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "globby": "^11.0.3",
         "jsdoc": "^3.6.6",
+        "next-secure-headers": "^2.2.0",
         "postcss": "^8.2.13",
         "postcss-100vh-fix": "^1.0.2",
         "postcss-flexbugs-fixes": "^5.0.2",
