--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
+   # Load scripts only via HTTPS and from allowed domains.
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "origin-when-cross-origin"
