--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@sendgrid/mail": "^7.4.2",
         "airtable": "^0.11.0",
         "axios": "^0.21.1",
+        "nanoid": "^3.1.22",
         "netlify-plugin-cache-nextjs": "^1.6.0",
         "next": "10.1.3",
         "next-seo": "^4.24.0",
