--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "nanoid": "^3.1.22",
         "netlify-plugin-cache-nextjs": "^1.6.1",
         "next": "10.2.0",
+        "next-plausible": "^1.6.1",
         "next-seo": "^4.24.0",
         "preact": "^10.5.13",
         "react": "17.0.2",
