--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@headlessui/react": "^1.2.0",
         "@sendgrid/mail": "^7.4.2",
+        "@tailwindcss/line-clamp": "^0.2.1",
         "airtable": "^0.11.0",
         "axios": "^0.21.1",
         "nanoid": "^3.1.23",
@@ -38,7 +39,7 @@
         "@babel/eslint-parser": "^7.13.14",
         "@netlify/plugin-nextjs": "^3.2.0",
         "@tailwindcss/jit": "^0.1.18",
-        "@tailwindcss/typography": "^0.4.0",
+        "@tailwindcss/typography": "^0.4.1",
         "autoprefixer": "^10.2.5",
         "classnames": "^2.3.1",
         "eslint": "^7.25.0",
@@ -58,6 +59,7 @@
         "postcss-hover-media-feature": "^1.0.1",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.2.1",
+        "prettier-plugin-tailwind-css": "^1.5.0",
         "tailwindcss": "^2.1.2",
         "tailwindcss-aspect-ratio": "^3.0.0",
         "tailwindcss-responsive-embed": "^1.0.0"
