--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
         "node": ">=14.8.0"
     },
     "dependencies": {
-        "@headlessui/react": "^1.2.0",
-        "@sendgrid/mail": "^7.4.2",
         "@tailwindcss/line-clamp": "^0.2.1",
         "airtable": "^0.11.0",
-        "axios": "^0.21.1",
         "nanoid": "^3.1.23",
         "netlify-plugin-cache-nextjs": "^1.6.1",
         "next": "10.2.0",
@@ -60,9 +57,7 @@
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.2.1",
         "prettier-plugin-tailwind-css": "^1.5.0",
-        "tailwindcss": "^2.1.2",
-        "tailwindcss-aspect-ratio": "^3.0.0",
-        "tailwindcss-responsive-embed": "^1.0.0"
+        "tailwindcss": "^2.1.2"
     },
     "browserslist": [
         ">0.3%",
