--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "node": ">=14.8.0"
     },
     "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.2.1",
         "@tailwindcss/line-clamp": "^0.2.1",
         "airtable": "^0.11.0",
         "nanoid": "^3.1.23",
