--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "node": ">=14.8.0"
     },
     "dependencies": {
+        "@headlessui/react": "^1.2.0",
+        "@heroicons/react": "^1.0.1",
         "@tailwindcss/aspect-ratio": "^0.2.1",
         "@tailwindcss/line-clamp": "^0.2.1",
         "airtable": "^0.11.0",
@@ -23,6 +25,7 @@
         "next": "10.2.0",
         "next-plausible": "^1.6.1",
         "next-seo": "^4.24.0",
+        "next-themes": "^0.0.14",
         "preact": "^10.5.13",
         "react": "17.0.2",
         "react-dom": "17.0.2",
@@ -57,7 +60,6 @@
         "postcss-hover-media-feature": "^1.0.1",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.2.1",
-        "prettier-plugin-tailwind-css": "^1.5.0",
         "tailwindcss": "^2.1.2"
     },
     "browserslist": [
