--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@tailwindcss/aspect-ratio": "^0.2.1",
         "@tailwindcss/line-clamp": "^0.2.1",
         "airtable": "^0.11.0",
+        "clsx": "^1.1.1",
         "nanoid": "^3.1.23",
         "netlify-plugin-cache-nextjs": "^1.6.1",
         "next": "10.2.0",
@@ -31,6 +32,7 @@
         "react-dom": "17.0.2",
         "react-icons": "^4.2.0",
         "react-iframe": "^1.8.0",
+        "react-intersection-observer": "^8.32.0",
         "react-router-dom": "^5.2.0",
         "react-router-hash-link": "^2.4.0",
         "react-scrollable-anchor": "^0.6.1"
@@ -60,6 +62,8 @@
         "postcss-hover-media-feature": "^1.0.1",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.2.1",
+        "stylelint": "^13.13.1",
+        "stylelint-config-standard": "^22.0.0",
         "tailwindcss": "^2.1.2"
     },
     "browserslist": [
