--- a/package.json
+++ b/package.json
@@ -15,56 +15,43 @@
         "node": ">=14.8.0"
     },
     "dependencies": {
-        "@headlessui/react": "^1.2.0",
-        "@heroicons/react": "^1.0.1",
         "@tailwindcss/aspect-ratio": "^0.2.1",
         "@tailwindcss/line-clamp": "^0.2.1",
-        "airtable": "^0.11.0",
+        "airtable": "^0.11.1",
         "clsx": "^1.1.1",
-        "nanoid": "^3.1.23",
-        "netlify-plugin-cache-nextjs": "^1.6.1",
-        "next": "10.2.0",
-        "next-plausible": "^1.6.1",
-        "next-seo": "^4.24.0",
-        "next-themes": "^0.0.14",
-        "preact": "^10.5.13",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
+        "next": "^11.0.1",
+        "next-plausible": "^1.7.0",
+        "next-seo": "^4.26.0",
+        "next-themes": "^0.0.15",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
-        "react-iframe": "^1.8.0",
-        "react-intersection-observer": "^8.32.0",
-        "react-router-dom": "^5.2.0",
-        "react-router-hash-link": "^2.4.0",
-        "react-scrollable-anchor": "^0.6.1"
+        "react-iframe": "^1.8.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.0",
-        "@babel/eslint-parser": "^7.13.14",
-        "@netlify/plugin-nextjs": "^3.2.0",
+        "@babel/core": "^7.14.6",
+        "@babel/eslint-parser": "^7.14.7",
         "@tailwindcss/jit": "^0.1.18",
-        "@tailwindcss/typography": "^0.4.1",
-        "autoprefixer": "^10.2.5",
-        "classnames": "^2.3.1",
-        "eslint": "^7.25.0",
+        "autoprefixer": "^10.2.6",
+        "eslint": "^7.30.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "globby": "^11.0.3",
-        "jsdoc": "^3.6.6",
-        "next-secure-headers": "^2.2.0",
-        "postcss": "^8.2.13",
+        "globby": "^11.0.4",
+        "jsdoc": "^3.6.7",
+        "postcss": "^8.3.5",
         "postcss-100vh-fix": "^1.0.2",
         "postcss-flexbugs-fixes": "^5.0.2",
         "postcss-hover-media-feature": "^1.0.1",
         "postcss-preset-env": "^6.7.0",
-        "prettier": "^2.2.1",
+        "prettier": "^2.3.2",
         "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
-        "tailwindcss": "^2.1.2"
+        "tailwindcss": "^2.2.4"
     },
     "browserslist": [
         ">0.3%",
