--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   },
   "extends": [
     "plugin:react/recommended",
+    "plugin:import/recommended",
     "airbnb",
     "plugin:prettier/recommended"
   ],
@@ -51,6 +52,7 @@
       }
     ],
     "jsx-a11y/label-has-for": ["off"],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
