--- a/package.json
+++ b/package.json
@@ -1,63 +1,67 @@
 {
-    "name": "next-netlify-starter",
-    "version": "0.3.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "export": "next export",
-        "deploy": "next build && next export",
-        "lint": "eslint ./components/** ./pages/** -c .eslintrc.json --ext js,jsx",
-        "lint-fix": "eslint ./components/** ./pages/** -c .eslintrc.json --fix --ext js,jsx"
-    },
-    "engines": {
-        "node": ">=14.8.0"
-    },
-    "dependencies": {
-        "@tailwindcss/aspect-ratio": "^0.2.1",
-        "@tailwindcss/line-clamp": "^0.2.1",
-        "airtable": "^0.11.1",
-        "clsx": "^1.1.1",
-        "next": "^11.0.1",
-        "next-plausible": "^1.7.0",
-        "next-seo": "^4.26.0",
-        "next-themes": "^0.0.15",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-icons": "^4.2.0",
-        "react-iframe": "^1.8.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.14.6",
-        "@babel/eslint-parser": "^7.14.7",
-        "@tailwindcss/jit": "^0.1.18",
-        "autoprefixer": "^10.2.6",
-        "eslint": "^7.30.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-next": "^11.0.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.4",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.24.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "globby": "^11.0.4",
-        "jsdoc": "^3.6.7",
-        "postcss": "^8.3.5",
-        "postcss-100vh-fix": "^1.0.2",
-        "postcss-flexbugs-fixes": "^5.0.2",
-        "postcss-hover-media-feature": "^1.0.1",
-        "postcss-preset-env": "^6.7.0",
-        "prettier": "^2.3.2",
-        "stylelint": "^13.13.1",
-        "stylelint-config-standard": "^22.0.0",
-        "tailwindcss": "^2.2.4"
-    },
-    "browserslist": [
-        ">0.3%",
-        "not ie 11",
-        "not dead",
-        "not op_mini all"
-    ]
+  "name": "next-netlify-starter",
+  "version": "0.3.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export",
+    "deploy": "next build && next export",
+    "lint": "eslint ./components/** ./pages/** -c .eslintrc.json --ext js,jsx",
+    "lint-fix": "eslint ./components/** ./pages/** -c .eslintrc.json --fix --ext js,jsx"
+  },
+  "engines": {
+    "node": ">=14.8.0"
+  },
+  "dependencies": {
+    "@headlessui/react": "^1.3.0",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
+    "airtable": "^0.11.1",
+    "clsx": "^1.1.1",
+    "next": "^11.0.1",
+    "next-plausible": "^1.7.0",
+    "next-seo": "^4.26.0",
+    "next-themes": "^0.0.15",
+    "postcss-easing-gradients": "^3.0.1",
+    "postcss-nesting": "^8.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-iframe": "^1.8.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
+    "@tailwindcss/jit": "^0.1.18",
+    "autoprefixer": "^10.2.6",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "globby": "^11.0.4",
+    "jsdoc": "^3.6.7",
+    "postcss": "^8.3.5",
+    "postcss-100vh-fix": "^1.0.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-hover-media-feature": "^1.0.1",
+    "prettier": "^2.3.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "tailwindcss": "^2.2.4"
+  },
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ]
 }
