--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "airtable": "^0.11.1",
     "clsx": "^1.1.1",
+    "lazysizes": "^5.3.2",
     "next": "^11.0.1",
     "next-plausible": "^1.7.0",
     "next-seo": "^4.26.0",
@@ -31,7 +32,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-iframe": "^1.8.0"
+    "react-iframe": "^1.8.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
