--- a/package.json
+++ b/package.json
@@ -5,60 +5,58 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
     "export": "next export",
-    "deploy": "next build && next export",
+    "postbuild": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-sitemap.mjs",
     "lint": "eslint ./components/** ./pages/** -c .eslintrc.json --ext js,jsx",
     "lint-fix": "eslint ./components/** ./pages/** -c .eslintrc.json --fix --ext js,jsx"
   },
-  "engines": {
-    "node": ">=14.8.0"
-  },
   "dependencies": {
-    "@headlessui/react": "^1.3.0",
+    "@headlessui/react": "^1.4.2",
     "@n8tb1t/use-scroll-position": "^2.0.3",
-    "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@xstate/inspect": "^0.6.0",
+    "@xstate/react": "^1.6.3",
     "airtable": "^0.11.1",
     "clsx": "^1.1.1",
     "lazysizes": "^5.3.2",
-    "next": "^11.0.1",
-    "next-plausible": "^1.7.0",
-    "next-seo": "^4.26.0",
+    "next": "^12.0.7",
+    "next-plausible": "^3.1.4",
+    "next-seo": "^4.28.1",
     "next-themes": "^0.0.15",
     "postcss-easing-gradients": "^3.0.1",
-    "postcss-nesting": "^8.0.1",
+    "postcss-nesting": "^10.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
-    "swr": "^0.5.6"
+    "swr": "^1.1.2",
+    "xstate": "^4.27.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/eslint-parser": "^7.14.7",
-    "@tailwindcss/jit": "^0.1.18",
-    "autoprefixer": "^10.2.6",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^11.0.1",
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "@netlify/plugin-nextjs": "^4.1.1",
+    "autoprefixer": "^10.4.1",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "globby": "^11.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "globby": "^12.0.2",
     "jsdoc": "^3.6.7",
-    "postcss": "^8.3.5",
+    "postcss": "^8.4.5",
     "postcss-100vh-fix": "^1.0.2",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-hover-media-feature": "^1.0.1",
-    "prettier": "^2.3.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "tailwindcss": "^2.2.4"
+    "prettier": "^2.5.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-standard": "^24.0.0",
+    "tailwindcss": "^3.0.10"
   },
   "browserslist": [
     ">0.3%",
