--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint-fix": "eslint ./components/** ./pages/** -c .eslintrc.json --fix --ext js,jsx"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.4.2",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
