hotfix: update netlify functions config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,12 @@
 [build]
   command = "npm run build"
-  functions = "functions"
+  functions = "netlifyfunctions"
   publish = "dist"
 
-[build.environment]
-  NODE_VERSION = "19.9.0"
-  NPM_VERSION = "9.6.3"
 
 
 [dev]
   command = "npm run dev"
-  functions = "functions"
+  functions = "netlify/functions"
   publish = "dist"
 
